examples/errors/09_duplicated_subprogram/duplicated_subprogram.txy
proc test()
endproc;

fn test(): int
	return 0;
endfn;

proc main()
endproc;